dh-make-perl (0.55) UNRELEASED; urgency=low

  * Tweak the "nocheck" test in debian/rules:
    - unbreak it: do not output the list of the group ID's of
      the developer's local account :)
    - remove the tab in the templates now that the contents is no
      longer a Makefile target command but an ifeq/endif pair instead

 -- Peter Pentchev <roam@ringlet.net>  Wed, 22 Apr 2009 17:23:06 +0300

dh-make-perl (0.54) unstable; urgency=low

  [ gregor herrmann ]
  * Change section to "perl" to match the changes in the overrides file.

  [ Damyan Ivanov ]
  * ignore --notest; instead, create debian/rules that obeys nocheck in
    DEB_BUILD_OPTIONS
    + add NEWS about that
    + remove --notest from POD
  * rules, control, compat: migrate to DH7
    + install links via debian/links, README via debian/docs
    + this gives support to 'nocheck' in DEB_BUILD_OPTIONS (Closes: #523560)
  * revert defaulting --dist to 'sid' when --pkg-perl is given
  * fix t/debian-version.t to allow (ignore) ~foo version suffix

  [ Ryan Niebur ]
  * add myself to the AUTHOR section

 -- Damyan Ivanov <dmn@debian.org>  Wed, 22 Apr 2009 13:31:45 +0300

dh-make-perl (0.53) unstable; urgency=low

  [ Pierre Neyron ]
  * Fix apt-file dependency lookup if --dist is set to list of distribution,
    e.g. "{stable,testing}"

  [ Damyan Ivanov ]
  * default --dist to empty string, parsing all Contents files referenced in
    sources.list. Further addresses #517227

  [ gregor herrmann ]
  * Bump Standards-Version to 3.8.1 (dh-make-perl, tests and generated
    packages).
  * Remove leading article from test distributions' short description.
  * Remove spurious comma from Build-Depends and slightly rephrase short
    description.

  [ Ryan Niebur ]
  * if --pkg-perl, set the changelog to UNRELEASED by default
  * if --pkg-perl is given, and --dist is not, set dist = sid
  * add myself to uploaders
  * when refreshing, extract the debian/* copyright holders and years
    from debian/changelog